feat: download map as image

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,6 +123,10 @@ path:focus {
   outline: none;
 }
 
+.leaflet-pane {
+  @apply z-0;
+}
+
 .leaflet-tooltip-left,
 .leaflet-tooltip-right {
   @apply border-0 bg-black/80 font-sans text-xs text-white;
