--- a/styles/dashboards/general.css
+++ b/styles/dashboards/general.css
@@ -68,27 +68,11 @@
 
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
-    border-right: 8px solid rgb(19 41 61);
+    border-right: 8px solid #18181b;
     left: -7px;
     top: 7px;
   }
 }
-
-/* .tooltip-content-up::before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 0;
-    position: absolute;
-
-    border-top: 8px solid #18181b;
-    border-bottom: 8px solid transparent;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-
-    left: 40%;
-    top: 26px;
-} */
 
 .tooltip:hover .tooltip-content {
   @apply visible;
