fix; table freeze cols

--- a/styles/dashboards/table.css
+++ b/styles/dashboards/table.css
@@ -1,9 +1,9 @@
 .table {
-  @apply relative mx-auto w-full table-auto border-collapse border-spacing-0 md:w-fit md:max-w-full;
+  @apply relative mx-auto w-full table-auto border-collapse border-spacing-0 whitespace-nowrap md:w-fit md:max-w-full;
 }
 
 .table-responsive {
-  @apply overflow-auto;
+  @apply overflow-x-auto;
 }
 
 .table th {
@@ -36,23 +36,12 @@
   @apply text-left;
 }
 
-.table-sticky-first thead tr > th:first-child {
-  @apply sticky left-0 z-10 whitespace-normal bg-white  md:whitespace-nowrap;
-}
-
-.table-sticky-first thead tr > th:not(:first-child) {
-  @apply whitespace-nowrap;
-}
-
-.table-sticky-first tbody tr > td:first-child {
-  @apply sticky left-0 z-10 bg-inherit;
-}
-.table-sticky-first tbody tr > td {
-  @apply whitespace-normal md:whitespace-nowrap;
-}
-
 .table-sticky-header tr > th {
   @apply sticky top-0 bg-white dark:bg-black;
+}
+
+.sticky-col {
+  @apply sticky z-10 max-w-fit whitespace-normal bg-white dark:bg-black md:whitespace-nowrap;
 }
 
 /* .table tr > td:first-child {
