--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,15 +99,15 @@ button[role="tab"][aria-selected="true"]::after {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.hide-scrollbar::-webkit-scrollbar {
+/* .hide-scrollbar::-webkit-scrollbar {
   display: none;
-}
+} */
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.hide-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+/* .hide-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+} */
 
 /* Hides outline for GeoChoropleth onclick */
 g:focus {
