--- a/apps/app/templates/dashboard-page.tsx.hbs
+++ b/apps/app/templates/dashboard-page.tsx.hbs
@@ -5,6 +5,7 @@ import type { Page } from "@lib/types";
 import { serverSideTranslations } from "next-i18next/serverSideTranslations";
 import Metadata from "@components/Metadata";
 import { useTranslation } from "@hooks/useTranslation";
+import { withi18n } from "@lib/decorators";
 import {{pascalCase dashboard_name}}Dashboard from "@dashboards/{{dashCase dashboard_category}}/{{dashCase dashboard_name}}";
 
 const {{pascalCase dashboard_name}}: Page = ({}: InferGetStaticPropsType<typeof getStaticProps>) => {
@@ -22,21 +23,14 @@ const {{pascalCase dashboard_name}}: Page = ({}: InferGetStaticPropsType<typeof 
   );
 };
 // Disabled
-export const getStaticProps: GetStaticProps = async ({ locale }) => {
-  const i18n = await serverSideTranslations(
-    locale!,
-    ["common", "dashboard-{{dashCase dashboard_name}}"],
-    
-  );
+export const getStaticProps: GetStaticProps = withi18n("dashboard-{{dashCase dashboard_name}}", async ({ locale }) => {
   //   const { data } = await get("/dashboard", { dashboard: "{{dashCase dashboard_name}}" });
 
   return {
     notFound: false,
-    props: {
-      ...i18n,
-    },
+    props: {},
     revalidate: 60 * 60 * 24, // 1 day (in seconds)
   };
-};
+});
 
 export default {{pascalCase dashboard_name}};
