style: floating icons

--- a/apps/app/styles/dashboards/general.css
+++ b/apps/app/styles/dashboards/general.css
@@ -111,73 +111,37 @@
 }
 
 /* FLOATING ICONS STYLES */
-.atom1-rotate {
-  transform: rotate(-45deg);
-}
-
-.atom2-rotate {
-  transform: rotate(-119.89deg);
-}
-
-.bar1-rotate {
-  transform: rotate(-6.1deg);
-}
-
-.bar2-rotate {
-  transform: rotate(16deg);
-}
-
-.bar3-rotate {
-  transform: rotate(7.73deg);
-}
-
-.line1-rotate {
-  transform: rotate(-10.44deg);
-}
-
-.line2-rotate {
-  transform: rotate(17.13deg);
-}
-
-.pie1-rotate {
-  transform: rotate(-167.73deg);
-}
-
-.pie3-rotate {
-  transform: rotate(-138.9deg);
-}
-
 .atom1-float {
   position: absolute;
-  top: 132px;
-  left: 416px;
+  top: 120px;
+  left: 562px;
   opacity: 0.8;
-  animation: bounce 3s infinite;
+  animation: float 3s infinite;
 }
 
 .atom2-float {
   position: absolute;
-  top: 643px;
+  top: 743px;
   left: 1155px;
   opacity: 0.4;
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
 .bar1-float {
   position: absolute;
-  top: 588px;
+  top: 587px;
   left: 830px;
   opacity: 0.3;
   filter: blur(3.5px);
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
 .bar2-float {
   position: absolute;
-  top: 184px;
-  left: 756px;
+  top: 176px;
+  left: 1367px;
   opacity: 0.8;
-  animation: bounce 5s infinite;
+  animation: float 5s infinite;
 }
 
 .bar3-float {
@@ -185,52 +149,52 @@
   top: 314px;
   left: 6px;
   opacity: 0.3;
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
 .line1-float {
   position: absolute;
-  top: 615px;
+  top: 719px;
   left: 174px;
   opacity: 0.8;
-  animation: bounce 3s infinite;
+  animation: float 3s infinite;
 }
 
 .line2-float {
   position: absolute;
-  top: 69px;
-  left: 1214px;
+  top: 67px;
+  left: 1101px;
   opacity: 0.4;
-  animation: bounce 5s infinite;
+  animation: float 5s infinite;
 }
 
 .pie1-float {
   position: absolute;
-  top: 355px;
-  left: 1407px;
+  top: 515px;
+  left: 1449px;
   opacity: 0.5;
   filter: blur(3.5px);
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
-.pie2 {
+.pie2-float {
   position: absolute;
   top: 100px;
-  left: 114px;
+  left: 164px;
   opacity: 0.8;
   filter: blur(2px);
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
 .pie3-float {
   position: absolute;
-  top: 599px;
+  top: 649px;
   left: 489px;
   opacity: 0.8;
-  animation: bounce 4s infinite;
+  animation: float 4s infinite;
 }
 
-@keyframes bounce {
+@keyframes float {
   0%,
   100% {
     transform: translateY(-20%);
