style: icons position

--- a/apps/app/styles/dashboards/general.css
+++ b/apps/app/styles/dashboards/general.css
@@ -113,24 +113,24 @@
 /* FLOATING ICONS STYLES */
 .atom1-float {
   position: absolute;
-  top: calc(10% + 123px);
-  left: calc(50% - 328px);
+  top: calc(50% - 286.5px);
+  left: calc(50% - 194px);
   opacity: 0.8;
   animation: float 3s infinite;
 }
 
 .atom2-float {
   position: absolute;
-  bottom: calc(50% - 268px);
-  right: calc(50% - 461px);
+  top: calc(50% + 290.5px);
+  left: calc(50% + 399px);
   opacity: 0.4;
   animation: float 4s infinite;
 }
 
 .bar1-float {
   position: absolute;
-  top: calc(24% + 365px);
-  right: calc(50% - 134px);
+  top: calc(50% + 180.5px);
+  left: calc(50% + 74px);
   opacity: 0.3;
   filter: blur(3.5px);
   animation: float 4s infinite;
@@ -138,15 +138,15 @@
 
 .bar2-float {
   position: absolute;
-  top: calc(9% + 99px);
-  right: calc(50% - 74px);
+  top: calc(50% - 230.5px);
+  left: calc(50% + 611px);
   opacity: 0.8;
   animation: float 5s infinite;
 }
 
 .bar3-float {
   position: absolute;
-  top: calc(18% + 176px);
+  top: calc(50% - 93.5px);
   left: calc(50% - 750px);
   opacity: 0.3;
   animation: float 4s infinite;
@@ -154,7 +154,7 @@
 
 .line1-float {
   position: absolute;
-  top: calc(20% + 500px);
+  top: calc(50% + 212.5px);
   left: calc(50% - 582px);
   opacity: 0.8;
   animation: float 3s infinite;
@@ -162,15 +162,15 @@
 
 .line2-float {
   position: absolute;
-  top: calc(2% + 70px);
-  right: calc(50% - 410px);
+  top: calc(50% - 339.5px);
+  left: calc(50% + 345px);
   opacity: 0.4;
   animation: float 5s infinite;
 }
 
 .pie1-float {
   position: absolute;
-  top: calc(8% + 88px);
+  top: calc(50% - 306.5px);
   left: calc(50% - 592px);
   opacity: 0.8;
   filter: blur(2px);
@@ -179,9 +179,18 @@
 
 .pie2-float {
   position: absolute;
-  top: calc(22% + 444px);
+  top: calc(50% + 192.5px);
   left: calc(50% - 267px);
   opacity: 0.8;
+  animation: float 4s infinite;
+}
+
+.pie3-float {
+  position: absolute;
+  top: calc(22% + 306px);
+  left: calc(50% + 693px);
+  opacity: 0.3;
+  filter: blur(3.5px);
   animation: float 4s infinite;
 }
 
