--- a/packages/datagovmy-nextra/css/scrollbar.css
+++ b/packages/datagovmy-nextra/css/scrollbar.css
@@ -4,19 +4,19 @@
 
   scrollbar-gutter: stable;
   &::-webkit-scrollbar {
-    @apply nx-w-3 nx-h-3;
+    @apply h-3 w-3;
   }
   &::-webkit-scrollbar-track {
-    @apply nx-bg-transparent;
+    @apply bg-transparent;
   }
   &::-webkit-scrollbar-thumb {
-    @apply nx-rounded-[10px];
+    @apply rounded-[10px];
   }
   &:hover::-webkit-scrollbar-thumb {
     border: 3px solid transparent;
     background-color: var(--tw-shadow-color);
     background-clip: content-box;
-    @apply nx-shadow-neutral-500/20 hover:nx-shadow-neutral-500/40;
+    @apply shadow-neutral-500/20 hover:shadow-neutral-500/40;
   }
 
   @media (max-width: 767px) {
@@ -32,6 +32,6 @@
   -ms-overflow-style: none; /* IE and Edge */
 
   &::-webkit-scrollbar {
-    @apply nx-hidden; /* Chrome, Safari and Opera */
+    @apply hidden; /* Chrome, Safari and Opera */
   }
 }
