--- a/packages/datagovmy-nextra/css/styles.css
+++ b/packages/datagovmy-nextra/css/styles.css
@@ -1,46 +1,82 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-@import 'nextra/styles/variables.css';
-@import 'nextra/styles/code-block.css';
-@import 'nextra/styles/subheading-anchor.css';
-@import './hamburger.css';
-@import './scrollbar.css';
-@import './typesetting-article.css';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "./variables.css";
+@import "./codeblock.css";
+@import "./anchor.css";
+@import "./hamburger.css";
+@import "./scrollbar.css";
+@import "./typesetting-article.css";
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap");
+
+@layer base {
+  h1 {
+    @apply font-header text-4xl font-bold leading-[54px];
+  }
+
+  h2 {
+    @apply font-header text-3xl font-bold leading-[38px] dark:text-white;
+  }
+
+  h3 {
+    @apply font-header text-2xl font-bold leading-[32px] dark:text-white;
+  }
+
+  h4 {
+    @apply font-header text-xl font-bold leading-[28px] dark:text-white;
+  }
+
+  h5 {
+    @apply text-base font-bold tracking-normal dark:text-white lg:text-lg;
+  }
+
+  h6 {
+    @apply text-base font-semibold uppercase tracking-wider text-gray-500;
+  }
+
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    appearance: none;
+  }
+}
 
 html {
-  @apply nx-antialiased nx-text-base;
-  font-feature-settings: 'rlig' 1, 'calt' 1, 'ss01' 1;
+  @apply text-base antialiased;
+  font-feature-settings: "rlig" 1, "calt" 1, "ss01" 1;
   -webkit-tap-highlight-color: transparent;
 }
 
 body {
-  @apply nx-w-full nx-bg-white dark:nx-bg-dark dark:nx-text-gray-100;
+  @apply dark:bg-dark w-full bg-white dark:text-gray-100;
 }
 
 a,
 summary,
 button,
 input,
-[tabindex]:not([tabindex='-1']) {
-  @apply nx-outline-none;
+[tabindex]:not([tabindex="-1"]) {
+  @apply outline-none;
   &:focus-visible {
-    @apply nx-ring-2 nx-ring-primary-200 nx-ring-offset-1 nx-ring-offset-primary-300 dark:nx-ring-primary-800 dark:nx-ring-offset-primary-700;
+    @apply ring-primary-200 ring-offset-primary-300 dark:ring-primary-800 dark:ring-offset-primary-700 ring-2 ring-offset-1;
   }
 }
 
 a,
 summary {
-  @apply nx-rounded;
+  @apply rounded;
 }
 
 .nextra-content {
-  @apply nx-text-slate-700 dark:nx-text-slate-200;
+  @apply text-slate-700 dark:text-slate-200;
 }
 
 @media (max-width: 767px) {
   .nextra-sidebar-container {
-    @apply nx-fixed nx-pt-[calc(var(--nextra-navbar-height))] nx-top-0 nx-w-full nx-bottom-0 nx-z-[15] nx-overscroll-contain nx-bg-white dark:nx-bg-dark;
+    @apply dark:bg-dark fixed bottom-0 top-0 z-[15] w-full overscroll-contain bg-white pt-[calc(var(--nextra-navbar-height))];
     transition: transform 0.8s cubic-bezier(0.52, 0.16, 0.04, 1);
     will-change: transform, opacity;
     contain: layout style;
@@ -54,22 +90,22 @@ summary {
 
   .nextra-banner-container ~ div {
     .nextra-sidebar-container {
-      @apply nx-pt-[6.5rem];
+      @apply pt-[6.5rem];
     }
     &.nextra-nav-container {
-      @apply nx-top-10 md:nx-top-0;
+      @apply top-10 md:top-0;
     }
   }
   .nextra-banner-hidden {
     .nextra-banner-container ~ div .nextra-sidebar-container {
-      @apply nx-pt-16;
+      @apply pt-16;
     }
     .nextra-nav-container {
-      @apply !nx-top-0;
+      @apply !top-0;
     }
   }
   .nextra-search .excerpt {
-    @apply nx-overflow-hidden nx-text-ellipsis;
+    @apply overflow-hidden text-ellipsis;
     display: -webkit-box;
     line-clamp: 1;
     -webkit-line-clamp: 1;
@@ -82,14 +118,14 @@ summary {
   .nextra-sidebar-container,
   .nextra-sidebar-container.open,
   body.resizing .nextra-sidebar-container {
-    @apply nx-transition-none;
+    @apply transition-none;
   }
 }
 
 /* Content Typography */
 article details > summary {
   &::-webkit-details-marker {
-    @apply nx-hidden;
+    @apply hidden;
   }
   &::before {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-5 w-5' viewBox='0 0 20 20' fill='currentColor'%3E%3Cpath fill-rule='evenodd' d='M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z' clip-rule='evenodd' /%3E%3C/svg%3E");
@@ -107,18 +143,16 @@ article details > summary {
   }
 }
 
-@supports (
-  (-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px))
-) {
+@supports ((-webkit-backdrop-filter: blur(1px)) or (backdrop-filter: blur(1px))) {
   .nextra-search ul {
-    @apply nx-backdrop-blur-lg nx-bg-white/70 dark:nx-bg-dark/80;
+    @apply dark:bg-dark/80 bg-white/70 backdrop-blur-lg;
   }
   .nextra-nav-container-blur {
-    @apply nx-backdrop-blur-md nx-bg-white/[.85] dark:!nx-bg-dark/80;
+    @apply dark:!bg-dark/80 bg-white/[.85] backdrop-blur-md;
   }
 }
 
-input[type='search'] {
+input[type="search"] {
   &::-webkit-search-decoration,
   &::-webkit-search-cancel-button,
   &::-webkit-search-results-button,
@@ -128,22 +162,22 @@ input[type='search'] {
 }
 
 .contains-task-list {
-  @apply nx-ml-0 nx-list-none;
-  input[type='checkbox'] {
-    @apply nx-mr-1;
+  @apply ml-0 list-none;
+  input[type="checkbox"] {
+    @apply mr-1;
   }
 }
 
 .nextra-banner-hidden .nextra-banner-container {
-  @apply nx-hidden;
+  @apply hidden;
 }
 
 .nextra-sidebar-container {
-  [data-toggle-animation='show'] button {
+  [data-toggle-animation="show"] button {
     opacity: 0;
     animation: nextra-fadein 1s ease 0.2s forwards;
   }
-  [data-toggle-animation='hide'] button {
+  [data-toggle-animation="hide"] button {
     opacity: 0;
     animation: nextra-fadein2 1s ease 0.2s forwards;
   }
@@ -204,10 +238,10 @@ input[type='search'] {
   counter-increment: step;
 
   &:before {
-    @apply nx-absolute nx-w-[33px] nx-h-[33px];
-    @apply nx-border-4 nx-border-white nx-bg-gray-100 dark:nx-border-dark dark:nx-bg-neutral-800;
-    @apply nx-rounded-full nx-text-neutral-400 nx-text-base nx-font-normal nx-text-center -nx-indent-px;
-    @apply nx-mt-[3px] nx-ml-[-41px];
+    @apply absolute h-[33px] w-[33px];
+    @apply dark:border-dark border-4 border-white bg-gray-100 dark:bg-neutral-800;
+    @apply rounded-full text-center -indent-px text-base font-normal text-neutral-400;
+    @apply ml-[-41px] mt-[3px];
     content: counter(step);
   }
 }
