--- a/packages/datagovmy-nextra/css/typesetting-article.css
+++ b/packages/datagovmy-nextra/css/typesetting-article.css
@@ -1,26 +1,26 @@
 article.nextra-body-typesetting-article {
   font-size: 17px;
-  font-feature-settings: 'rlig' 1, 'calt' 1;
+  font-feature-settings: "rlig" 1, "calt" 1;
   h1 {
-    @apply nx-mt-6 nx-mb-4 nx-text-center;
+    @apply mb-4 mt-6 text-center;
     font-size: 2.5rem;
   }
   h2 {
-    @apply nx-border-none;
+    @apply border-none;
   }
   a {
-    @apply nx-no-underline hover:nx-underline;
+    @apply no-underline hover:underline;
   }
   p {
-    @apply nx-leading-8;
+    @apply leading-8;
   }
   code {
-    @apply nx-border-none dark:nx-bg-neutral-700;
+    @apply border-none dark:bg-neutral-700;
   }
   pre code {
-    @apply dark:nx-bg-transparent;
+    @apply dark:bg-transparent;
   }
   .subheading-anchor + a {
-    @apply nx-no-underline hover:nx-no-underline after:nx-hidden;
+    @apply no-underline after:hidden hover:no-underline;
   }
 }
