style: add no-scrollbar utility

--- a/apps/app/styles/globals.css
+++ b/apps/app/styles/globals.css
@@ -172,3 +172,19 @@ path:focus {
 :focus-visible {
   outline: unset;
 }
+
+/*
+    https://github.com/tailwindlabs/tailwindcss/discussions/2394
+    https://github.com/tailwindlabs/tailwindcss/pull/5732
+*/
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
