fix: window provider local scope

--- a/apps/app/styles/dashboards/table.css
+++ b/apps/app/styles/dashboards/table.css
@@ -23,7 +23,7 @@
 }
 
 .table td {
-  @apply border-outline dark:border-washed-dark w-auto snap-end border-b px-2 py-2;
+  @apply border-outline dark:border-washed-dark snap-end border-b px-2 py-2;
 }
 /* .table td:not(:first-child) {
   @apply whitespace-nowrap;
