fix: i18n agency name

--- a/apps/app/templates/dashboard-component.tsx.hbs
+++ b/apps/app/templates/dashboard-component.tsx.hbs
@@ -18,7 +18,7 @@ const {{pascalCase dashboard_name}}: FunctionComponent<{{pascalCase dashboard_na
     <>
       <Hero
         background="gray"
-        category={[t("category"), "text-black"]}
+        category={[t("common:categories.{{dashboard_category}}", "text-black"]}
         header={[t("header")]}
         description={[t("description")]}
         agencyBadge={
