Fix/dc issues (#142)
* fix: middleware rewrite on edge & add prefetch false

* temp: disable other pages

* fix: avoid ref for passing data

* Revert "temp: disable other pages"

This reverts commit c18f3fe75343ae7e1bf9e74c0298214ce9390caf.

* feat: show plural form for views and downloads

* fix: refactor useAnalytics impl

* feat: base orang asli and emergency response dashboard

* fix: remove unused imports

* fix: add namespace i18n

* fix: i18n agency name

* chore: replace 999 tracker namespace to emer response

* chore: remove 999 tracker

---------

Co-authored-by: eujiaxin <e_jaxx@hotmail.com>

--- a/apps/app/templates/dashboard-component.tsx.hbs
+++ b/apps/app/templates/dashboard-component.tsx.hbs
@@ -1,4 +1,4 @@
-import AgencyBadge from "@components/AgencyBadge";
+import AgencyBadge from "@components/Badge/agency";
 import { Hero, Section } from "@components/index";
 import { useTranslation } from "@hooks/useTranslation";
 import { FunctionComponent } from "react";
@@ -18,9 +18,9 @@ const {{pascalCase dashboard_name}}: FunctionComponent<{{pascalCase dashboard_na
     <>
       <Hero
         background="gray"
-        category={[t("dashboard-{{dashCase dashboard_name}}:category"), "text-black"]}
-        header={[t("dashboard-{{dashCase dashboard_name}}:header")]}
-        description={[t("dashboard-{{dashCase dashboard_name}}:description")]}
+        category={[t("common:categories.{{dashboard_category}}", "text-black"]}
+        header={[t("header")]}
+        description={[t("description")]}
         agencyBadge={
           <AgencyBadge
             agency="{{titleCase agency_name}}"
