--- a/apps/app/styles/dashboards/table.css
+++ b/apps/app/styles/dashboards/table.css
@@ -42,7 +42,7 @@
 }
 
 .sticky-col {
-  @apply border-outline dark:border-washed-dark sticky z-10 max-w-fit whitespace-normal border-r-2 bg-white dark:bg-black lg:border-r-0;
+  @apply border-outline dark:border-washed-dark sticky z-10 max-w-fit whitespace-normal border-r-2 bg-inherit lg:border-r-0;
 }
 
 /* .table tr > td:first-child {
