--- a/apps/app/styles/globals.css
+++ b/apps/app/styles/globals.css
@@ -66,11 +66,7 @@
   }
 
   .btn-default {
-    @apply btn btn-border bg-default px-3 py-1.5;
-  }
-
-  .bg-default {
-    @apply active:bg-washed hover:dark:bg-washed-dark/50 active:dark:bg-washed-dark bg-white dark:bg-black;
+    @apply btn btn-border active:bg-washed hover:dark:bg-washed-dark/50 active:dark:bg-washed-dark bg-white px-3 py-1.5 dark:bg-black;
   }
 
   .btn-border {
