--- a/tests/utils/templates/dashboard-spec.hbs
+++ b/tests/utils/templates/dashboard-spec.hbs
@@ -21,7 +21,7 @@ const parameters: HeroParameters = {
  * @example function sectionATestSuite (page: PlaywrightPage) { ... }
  *          await board.execute(sectionATestSuite)
  */
-const mainTestSuite = (page: PlaywrightPage) => {};
+const mainTestSuite = async (page: PlaywrightPage) => {};
 
 test("{{ dashCase test_name }}", async ({ page }) => {
   const board = new DashboardPage(page, "/dashboard/{{ dashCase test_name }}");
