--- a/tests/utils/templates/dashboard-spec.hbs
+++ b/tests/utils/templates/dashboard-spec.hbs
@@ -1,5 +1,7 @@
-import { test, expect, Page as PlaywrightPage } from "utils/playwright";
+import { test, expect } from "utils/playwright";
 import { DashboardPage, HeroParameters } from "@model/dashboard.js";
+import { enumify } from "utils/helper";
+
 
 /**
  * Please fill this in.
@@ -12,22 +14,28 @@ const ID = enumify([
   // eg. "timeseries-test-id"
 ]);
 
+/************************** COMMON TEST **************************/
+
 /**
  * Main test suite for the dashboard.
  * @param page Playwright page context
  * @description Note: For dashboard with children dashboards (ie. states, sekolah etc),
  *              DO NOT place any edge-test cases in here, as it will run at every child
  *              dashboard.
- *
- *              Create a separate test suite function and pass it to 'board.execute(...)'
+ *              Create a separate or inline function and pass it to `board.execute()`
  *              method
- * @example function sectionATestSuite (page: PlaywrightPage) { ... }
- *          await board.execute(sectionATestSuite)
- */
-const mainTestSuite = async (page: PlaywrightPage) => {};
+ * @example // Separate function
+ * async function sectionATestSuite (board: DashboardPage) { ... }
+ * await board.execute(sectionATestSuite)
+ * @example // Inline function
+ * await board.execute(async (board: DashboardPage) => { ... })
+
+const mainTestSuite = async (board: DashboardPage) => {};
+
+/************************** TEST SUITE **************************/
 
 test("{{ dashCase test_name }}", async ({ page }) => {
-  const board = new DashboardPage(page, "{{ dashCase test_name }}", "/dashboard/{{ dashCase test_name }}");
+  const board = new DashboardPage(page, "{{ dashCase test_name }}");
   await board.goto();
   await board.validateHero(parameters);
   await board.execute(mainTestSuite);
